--- a/Views/EditorPage.xaml
+++ b/Views/EditorPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="notes.Views.NotePage"
+    x:Class="notes.Views.EditorPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:notes.Views"
@@ -9,6 +9,8 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-		
+		<Border Background="Aqua">
+			
+		</Border>
     </Grid>
 </Page>
