--- a/Views/NotesPage.xaml
+++ b/Views/NotesPage.xaml
@@ -32,7 +32,8 @@
 								<RowDefinition Height="24*"></RowDefinition>
 								<RowDefinition Height="5*"></RowDefinition>
 							</Grid.RowDefinitions>
-							<TextBlock FontSize="20">title</TextBlock>
+							<TextBlock FontSize="20" Text="{Binding Title}"></TextBlock>
+							<TextBlock FontSize="16" Grid.Row="1" Text="{Binding Content}"></TextBlock>
 							<TextBlock Grid.Row="2">date</TextBlock>
 						</Grid>
 					</Border>
