--- a/Views/NotebookPage.xaml
+++ b/Views/NotebookPage.xaml
@@ -29,12 +29,6 @@
 		</Grid.RowDefinitions>
 		<controls:DockPanel Grid.Row="0" VerticalAlignment="Center">
 			<TextBlock FontSize="30" Text="Notebooks">
-				
-				<i:Interaction.Behaviors>
-										<core:EventTriggerBehavior EventName="Tapped">
-											<core:InvokeCommandAction Command="{Binding OpenEditCommand}" />
-										</core:EventTriggerBehavior>
-				</i:Interaction.Behaviors>
 			</TextBlock>
 			<Button Margin="10" controls:DockPanel.Dock="Right" HorizontalAlignment="Right" Command="{Binding CreateNotebookCommand}">+ Notebook</Button>
 		</controls:DockPanel>
@@ -65,7 +59,7 @@
 								</MenuFlyout>
 							</FlyoutBase.AttachedFlyout>
 						</Image>
-						<TextBlock Text="{Binding Name}" HorizontalAlignment="Center"></TextBlock>
+						<TextBlock Text="{Binding Title}" HorizontalAlignment="Center"></TextBlock>
 					</StackPanel>
 				</DataTemplate>
 			</GridView.ItemTemplate>
@@ -78,7 +72,7 @@
 					<RowDefinition Height="298*"></RowDefinition>
 				</Grid.RowDefinitions>
 				<controls:DockPanel VerticalAlignment="Center" Height="32">
-					<TextBox Text="{Binding EditedNotebook.Name, Mode=TwoWay}" Margin="0,0,-348,0"></TextBox>
+					<TextBox Text="{Binding EditedNotebook.Title, Mode=TwoWay}" Margin="0,0,-348,0"></TextBox>
 					<Button HorizontalAlignment="Right" Command="{Binding CloseEditCommand}">x</Button>
 				</controls:DockPanel>
 				<StackPanel Grid.Row="1" Orientation="Horizontal">
