editing checks (is field empty)

--- a/Views/EditorPage.xaml
+++ b/Views/EditorPage.xaml
@@ -23,12 +23,14 @@
 				</Grid.RowDefinitions>
 				<Grid>
 					<Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="13*"></ColumnDefinition>
 						<ColumnDefinition Width="62*"></ColumnDefinition>
 						<ColumnDefinition Width="13*"></ColumnDefinition>
 					</Grid.ColumnDefinitions>
-					<TextBox Text="{Binding Title, Mode=TwoWay}" PlaceholderText="Title" FontSize="50" Margin="5,7,0,6"></TextBox>
-
-					<Button Grid.Column="1" x:Name="saveBtn" Command="{Binding ExitCommand}" Width="220" Height="80" HorizontalAlignment="Center" >Save</Button>
+                    <Button Grid.Column="0" x:Name="backBtn" Command="{Binding GoBackCommand}" Width="220" Height="80" HorizontalAlignment="Center" >Back</Button>
+                    <TextBox Text="{Binding Title, Mode=TwoWay}" PlaceholderText="Title" Grid.Column="1" FontSize="50" Margin="5,10,0,10"></TextBox>
+	
+					<Button Grid.Column="2" x:Name="saveBtn" Command="{Binding SaveExitCommand}" Width="220" Height="80" HorizontalAlignment="Center" >Save</Button>
 				</Grid>
 				<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
 					<StackPanel Orientation="Horizontal" Margin="20">
